--- a/rover/partials/billingInformation/reservation/rvBillingInfoRoutesList.html
+++ b/rover/partials/billingInformation/reservation/rvBillingInfoRoutesList.html
@@ -20,7 +20,11 @@
 						<div class="guest-image icons icon-allotment" ng-if="escapeNull(selectedEntity.entity_type)=='ALLOTMENT' || escapeNull(selectedEntity.entity_type)=='HOUSE'"></div>
 					</figure>
 
-		            <h2>{{route.name}}</h2>
+					<div ng-class="{ 'data':route.address }">
+                        <h2>{{route.name}}</h2>
+                        <span class="location">{{route.address}}</span>
+                    </div>
+
 		            <div class="type">
 		               <span class="label">{{getRouteType(route)}}</span>
 		               {{getCharges(route)}}
