--- a/stylesheets/less/app/05-C_plugins.less
+++ b/stylesheets/less/app/05-C_plugins.less
@@ -3081,6 +3081,14 @@
                     &.loading { #fade > .out; }
                 }
 
+                &.has-error {
+                    .content-wrapper {
+                        .calc-height(100, 226);
+
+                        &.no-action { .calc-height(100, 136); }
+                    }
+                }
+
                 /* Entity details ***/
                 .billing-list,
                 .entity {
