CICO-29827 - Style update

--- a/stylesheets/less/app/03_graphics.less
+++ b/stylesheets/less/app/03_graphics.less
@@ -671,6 +671,7 @@
         &.icon-group { background-position: 0 -420px;}
         &.icon-balance { background-position: 0 -450px; }
         &.icon-cards { background-position: 0 -480px; }
+        &.icon-room { background-position: 0 -660px; }
 
 		@media @highdpi {
 			background-image: @iconReports2x;
