--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -425,7 +425,7 @@
 
 /**************************** Footer Styles ***********************/
 .main-container{
-    height:100%;
+    height:95%;
 }
 #zest-footer{
     bottom:0;
@@ -439,7 +439,7 @@
 }
 @media (max-width: 900px) {
     #zest-footer{
-      padding: 10% 0;
+      padding: 2% 0 10%;
       a{
         width:100%;
         margin-bottom:5px;
@@ -450,7 +450,7 @@
 @media (min-width: 900px) {
 
   #zest-footer{
-    padding: 15% 10% 5%;
+    padding: 3% 10% 5%;
     bottom:0;
     a{
       font-size: 18px;
