--- a/rover/partials/reports/shared/summaryCounts.html
+++ b/rover/partials/reports/shared/summaryCounts.html
@@ -191,3 +191,8 @@
     <li>Total Actions<span>{{ totalCount}}</span></li>
 
 </ul>
+<!-- Vacant Rooms -->
+<ul ng-if="isThisReport( 'VACANT_ROOMS_REPORT' )" class="totals">
+    <li>Rooms<span>{{ summaryCounts}}</span></li>
+
+</ul>
