--- a/rover/partials/cards/travelAgentCardContent.html
+++ b/rover/partials/cards/travelAgentCardContent.html
@@ -60,11 +60,12 @@
                                     </div>
                                     <span ng-if="travelAgent.isMultipleContracts" class="icons icon-contracts">Multiple Contracts</span>
                                 </div>
+         
                                 <span class="confirmation">{{ travelAgent.address.postalCode }}</span>
-                                <span class="icons icon-location" ng-if="travelAgent.address.city != '' && travelAgent.address.city != null"> 
-                                    <span ng-bind-html="'getHighlightedHTML(travelAgent.address.city, searchData.travelAgentCard.travelAgentCity"></span>
-                                    <span ng-show="travelAgent.address.state">, </span>
-                                    {{ travelAgent.address.state }}
+                                <span class="icons icon-location" ng-if="travelAgent.account_address != '' "> 
+                                    
+                                    {{travelAgent.account_address}}
+                           
                                 </span>
                                 <span class="icons icon-phone" ng-if="travelAgent.phone != '' && travelAgent.phone != null">{{ travelAgent.phone }}</span>
                                 <span class="icons icon-email-grey" ng-if="travelAgent.email != '' && travelAgent.email != null">{{ travelAgent.email }}</span>
