CICO-34755 fixing issue with admin button alignment

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1370,6 +1370,9 @@
 }
 
 #actions {
+    .button-left-margin{
+      margin-left: 40px;
+    }
     &.languages {
         .language {
             margin-right: 15px;
