--- a/login/partials/selectProperty.html
+++ b/login/partials/selectProperty.html
@@ -23,8 +23,8 @@
             <div class="property-autocomplete scrollable" ng-show="selectedPropertyId === ''" ng-class="{'open': propertyResults.length > 0 }" ng-iscroll="property-results" ng-iscroll-delay="300">
                 <div class="wrapper" >
                     <ul class="ui-autocomplete">
-                        <li ng-repeat="property in propertyResults track by $index">
-                            <a ng-click="onSelect(property)" ng-bind-html="highlight(property.name, searchData)"></a>
+                        <li ng-click="onSelect(property)" ng-repeat="property in propertyResults track by $index">
+                            <a  ng-bind-html="highlight(property.name, searchData)"></a>
                         </li>
                     </ul>
                 </div>
