adds system_id to revinate admin setup page

--- a/admin/partials/revinateSetup/adRevinateSetup.html
+++ b/admin/partials/revinateSetup/adRevinateSetup.html
@@ -45,11 +45,14 @@
                 <ad-textbox value="data.data.product_cross_customer.tracker_access_url" inputtype="access-url"
                             name="access-url" id="access-url" label="{{'REVINATE_ACCESS_URL_LABEL'| translate}}"
                             styleclass="full-width"></ad-textbox>
+                <ad-textbox value="data.data.product_cross_customer.tracker_access_url" inputtype="access-url"
+                            name="access-url" id="access-url" label="{{'REVINATE_ACCESS_URL_LABEL'| translate}}"
+                            styleclass="full-width"></ad-textbox>
                 <ad-textbox value="data.data.product_cross_customer.hotel_code" inputtype="hotel-code" name="hotel-code"
                             id="hotel-code" label="{{'REVINATE_HOTEL_CODE_LABEL'| translate}}"
                             styleclass="full-width"></ad-textbox>
-                <ad-textbox value="data.data.product_cross_customer.tracker_customer_name" inputtype="customer-name"
-                            name="customer-name" id="customer-name" label="{{'REVINATE_CUSTOMER_NAME_LABEL'| translate}}"
+                <ad-textbox value="data.data.product_cross_customer.tracker_system_id" inputtype="system-id"
+                            name="system-id" id="system-id" label="{{'REVINATE_SYSTEM_ID'| translate}}"
                             styleclass="full-width"></ad-textbox>
                 <ad-textbox value="data.data.product_cross_customer.tracker_property_name" inputtype="property-name"
                             name="property-name" id="property-name" label="{{'REVINATE_PROPERTY_NAME_LABEL'| translate}}"
