--- a/rover/partials/bill/rvSelectEntity.html
+++ b/rover/partials/bill/rvSelectEntity.html
@@ -92,9 +92,9 @@
                     <div class="group-info" ng-if="escapeNull(selectedEntity.entity_type)=='GROUP' || escapeNull(selectedEntity.entity_type)=='HOUSE'">A</div>
                     <div class="group-info" ng-if="escapeNull(selectedEntity.entity_type)=='ALLOTMENT' || escapeNull(selectedEntity.entity_type)=='HOUSE'">A</div>
                   </figure>
-                  <div ng-class="{'data':selectedEntity.address}">
+                  <div ng-class="{'data':selectedEntity.account_address}">
                       <h2>{{selectedEntity.name}}</h2>
-                      <span class="location">{{selectedEntity.address}}</span>
+                      <span class="location">{{selectedEntity.account_address}}</span>
                   </div>
                   <span class="guest-status small-icon" ng-class = "getGuestStatusMapped(selectedEntity.reservation_status, selectedEntity.is_opted_late_checkout)"  ng-hide="selectedEntity.entity_type !='RESERVATION'" >{{selectedEntity.status}}</span>
                   <span class="status" ng-class="getEntityRole(selectedEntity)" ng-show="selectedEntity.entity_type !='RESERVATION'">{{selectedEntity.status}}</span>
