CICO-29668 Updated as account_address

--- a/rover/partials/bill/rvAllRoutes.html
+++ b/rover/partials/bill/rvAllRoutes.html
@@ -22,9 +22,9 @@
 								<div class="guest-image icons icon-allotment" ng-if="escapeNull(selectedEntity.entity_type)=='ALLOTMENT'"></div>
 							</figure>
 
-			            <div ng-class="{ 'data':route.address }">
+			            <div ng-class="{ 'data':route.account_address }">
 	                        <h2>{{route.name}}</h2>
-	                        <span class="location">{{route.address}}</span>
+	                        <span class="location">{{route.account_address}}</span>
 	                    </div>
 	                    
 			            <div class="type">
