--- a/rover/partials/bill/rvSelectEntity.html
+++ b/rover/partials/bill/rvSelectEntity.html
@@ -55,7 +55,7 @@
 		                </figure>
                     <div class="data">
                       <h2>{{attachedEntities.company_card.name}}</h2>
-                      <span class="location">{{attachedEntities.company_card.address}}</span>
+                      <span class="location">{{attachedEntities.company_card.account_address}}</span>
                     </div>
                  </li>
 
@@ -71,7 +71,7 @@
 
                     <div class="data">
                         <h2>{{attachedEntities.travel_agent.name}}</h2>
-                        <span class="location">{{attachedEntities.travel_agent.address}}</span>
+                        <span class="location">{{attachedEntities.travel_agent.account_address}}</span>
                     </div>
                  </li>
 
