CICO-33706 : Intermediate commit -  open all function re-arrangement.

--- a/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
+++ b/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
@@ -33,7 +33,7 @@
     <ul class="actions">
         <li>
             <!-- Remove class .green if they are closed, not open -->
-            <button class="button rm-buttonOpenClose green">
+            <button class="button rm-buttonOpenClose green" ng-click="openAll()">
                 Open All
             </button>  
         </li>
