--- a/stylesheets/less/app/03_graphics.less
+++ b/stylesheets/less/app/03_graphics.less
@@ -410,6 +410,14 @@
 			&.icon-diary-oos { background-position: 0 -6158px; }
 			&.icon-diary-lock { background-position: 0 -9100px; }
 
+			&.icon-filter-room { 
+                background-position: 0px -10300px;
+
+                &.active {
+                    background-position: 0px -10420px;
+                }
+            }
+
 		/* Social Lobby ***/
 			&.icon-show-conversations {
 				background-position: 1px -2199px;
