--- a/stylesheets/less/app/05-A_components.less
+++ b/stylesheets/less/app/05-A_components.less
@@ -54,23 +54,26 @@
 /* Work Management          ==============================*/
 @import "screens/15.work-management.less";
 
-/* Journal                   ==============================*/
+/* Journal                  ==============================*/
 @import "screens/16.journal.less";
 
-/* Room Diary                ==============================*/
+/* Room Diary               ==============================*/
 @import "screens/17.diary.less";
 
-/* Rate Manager                ==============================*/
+/* Rate Manager             ==============================*/
 @import "screens/18.rate-manager.less";
 
-/* Accounts Receivables                ==============================*/
+/* Accounts Receivables     ==============================*/
 @import "screens/19.accounts-receivables.less";
 
-/* Commissions                ==============================*/
+/* Commissions              ==============================*/
 @import "screens/20.commisions.less";
  
 /* End of Day               ==============================*/
 @import "screens/21.end-of-day.less";
+
+/* Room Diary Nightly       ==============================*/ 
+@import "screens/22.diary-nightly.less";
 
 /* 6. IE
 ==========================================================*/
