CICO-33706 : Intermediate commit - toggle button enabled.

--- a/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
+++ b/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
@@ -39,7 +39,7 @@
         </li>
         <li>
              <!-- Add class .red if they are closed, not open -->
-            <button class="button  rm-buttonOpenClose" ng-click ="closeAll()">
+            <button class="button  rm-buttonOpenClose red" ng-click ="closeAll()">
                 Close All
             </button>
         </li>
