--- a/admin/partials/zestwebCommonSettings/adZestwebCommonSettings.html
+++ b/admin/partials/zestwebCommonSettings/adZestwebCommonSettings.html
@@ -23,25 +23,25 @@
                         <div class="form-title full-width">
                             <h3><span> Footer Text 1</span></h3>
                         </div>
-                        <ad-toggle-button is-checked="zestCommonSettings.zest_web_footer_settings.footers[0].is_active" label="Display"></ad-toggle-button>
-                        <ad-textbox value="zestCommonSettings.zest_web_footer_settings.footers[0].label" label="Label" styleclass="full-width" placeholder=""></ad-textbox>
-                        <ad-textbox value="zestCommonSettings.zest_web_footer_settings.footers[0].url" label="URL" styleclass="full-width" placeholder=""></ad-textbox>
+                        <ad-toggle-button is-checked="footer1.is_active" label="Display"></ad-toggle-button>
+                        <ad-textbox value="footer1.label" label="Label" styleclass="full-width" placeholder=""></ad-textbox>
+                        <ad-textbox value="footer1.url" label="URL" styleclass="full-width" placeholder=""></ad-textbox>
                     </div>
                     <div class="entry full-width">
                         <div class="form-title full-width">
                             <h3><span> Footer Text 2</span></h3>
                         </div>
-                        <ad-toggle-button is-checked="zestCommonSettings.zest_web_footer_settings.footers[1].is_active" label="Display"></ad-toggle-button>
-                        <ad-textbox value="zestCommonSettings.zest_web_footer_settings.footers[1].label" label="Label" styleclass="full-width" placeholder=""></ad-textbox>
-                        <ad-textbox value="zestCommonSettings.zest_web_footer_settings.footers[1].url" label="URL" styleclass="full-width" placeholder=""></ad-textbox>
+                        <ad-toggle-button is-checked="footer2.is_active" label="Display"></ad-toggle-button>
+                        <ad-textbox value="footer2.label" label="Label" styleclass="full-width" placeholder=""></ad-textbox>
+                        <ad-textbox value="footer2.url" label="URL" styleclass="full-width" placeholder=""></ad-textbox>
                     </div>
                     <div class="entry full-width">
                         <div class="form-title full-width">
                             <h3><span> Footer Text 3</span></h3>
                         </div>
-                        <ad-toggle-button is-checked="zestCommonSettings.zest_web_footer_settings.footers[2].is_active" label="Display"></ad-toggle-button>
-                        <ad-textbox value="zestCommonSettings.zest_web_footer_settings.footers[2].label" label="Label" styleclass="full-width" placeholder=""></ad-textbox>
-                        <ad-textbox value="zestCommonSettings.zest_web_footer_settings.footers[2].url" label="URL" styleclass="full-width" placeholder=""></ad-textbox>
+                        <ad-toggle-button is-checked="footer3.is_active" label="Display"></ad-toggle-button>
+                        <ad-textbox value="footer3.label" label="Label" styleclass="full-width" placeholder=""></ad-textbox>
+                        <ad-textbox value="footer3.url" label="URL" styleclass="full-width" placeholder=""></ad-textbox>
                     </div>
                 </fieldset>
                 <div class="actions float">
