CICO-34245 adding footer to zestweb

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -425,7 +425,8 @@
 
 /**************************** Footer Styles ***********************/
 .main-container{
-    height:85%;
+    height:auto;
+    min-height:85%;
 }
 #zest-footer{
     bottom:0;
