CICO-34245 code clean

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -423,6 +423,7 @@
     }
 }
 
+
 /**************************** Footer Styles ***********************/
 .main-container{
     height:auto;
@@ -451,7 +452,7 @@
 @media (min-width: 900px) {
 
   #zest-footer{
-    padding: 3% 10% 5%;
+    padding: 3% 25% 5%;
     bottom:0;
     a{
       font-size: 18px;
@@ -460,9 +461,12 @@
   #zest-footer.single-footer a{
         width:100%;
   }
-  #zest-footer.double-footer a{
+  #zest-footer.double-footer{
+    padding: 3% 34% 5%;
+    a{
         width:45%
-  }
+    }
+  } 
   #zest-footer.triple-footer a{
         width:30%;
   }
