CICO-34809: Removed reestrict post in admin settings

--- a/admin/partials/paymentMethods/adEditPaymentMethod.html
+++ b/admin/partials/paymentMethods/adEditPaymentMethod.html
@@ -33,7 +33,7 @@
 
 			<ad-checkbox is-disabled="editData.value == 'CC'" is-checked="editData.is_display_reference" label="{{ 'DISPLAY_REFERENCE' | translate}}" div-class="full-width"></ad-checkbox>
 
-			<div class="entry radio-check " ng-hide="editData.value == 'CC' && !isEditCC">
+			<div class="entry radio-check " ng-hide="editData.value == 'CC' && !isEditCC" ng-if="isStandAlone">
                 <label class="checkbox">
                     <span class="icon-form icon-checkbox" ng-class="{'checked': editData.restrict_post}"></span>
                     {{ 'RESTRICT_POST' | translate }}
