--- a/rover/partials/accounts/transactions/rvAccountTransactions.html
+++ b/rover/partials/accounts/transactions/rvAccountTransactions.html
@@ -14,9 +14,10 @@
             </div>
         </li>
         <li>
-            <!-- <button type="button" class="button blue">
-                Billing Information
-            </button> -->
+            <div class="entry">
+                <span class="label">Billing Reference No.</span>
+                <input id="account-company" ng-model="transactionsDetails.custom_reference_number" value="transactionsDetails.custom_reference_number" type="text" ng-change="changeBillingReferanceNumber()"/>
+            </div>
         </li>
     </ul>
 </div>
