CICO-30026 : Fix for wrong positioned input field.

--- a/rover/partials/accounts/transactions/rvAccountTransactions.html
+++ b/rover/partials/accounts/transactions/rvAccountTransactions.html
@@ -19,6 +19,11 @@
                 <input id="account-company" ng-model="transactionsDetails.custom_reference_number" value="transactionsDetails.custom_reference_number" type="text" ng-change="changeBillingReferanceNumber()"/>
             </div>
         </li>
+        <li>
+            <!-- <button type="button" class="button blue">
+                Billing Information
+            </button> -->
+        </li>
     </ul>
 </div>
 
