CICO-34109 added the files and initial logics

--- a/rover/css/rover_scroll_fix.css.less
+++ b/rover/css/rover_scroll_fix.css.less
@@ -165,3 +165,16 @@
 .word_wrap{
   word-wrap: break-word;
 }
+
+
+//SCROLL FIX IN NEIGHBOURS
+.neighbours-post-scroll{
+  height : 500px;
+}
+.neighbours-post-container{
+  height : 2000px;
+}
+.add-post{
+  height : 90px !important;
+}
+
