CICO-29827 Fixed the issues related to sorting

--- a/rover/partials/reports/filters/rvReportDetailsFilters.html
+++ b/rover/partials/reports/filters/rvReportDetailsFilters.html
@@ -622,7 +622,7 @@
         </a>
         <div class="settings-content" ng-show="chosenReport.hasMinNoOfDaysNotOccupied" ng-class="{'hidden': !filterItemsToggle.item_45}">
             <label>Min. Days Not Occupied</label>
-            <input ng-model="chosenReport.hasMinNoOfDaysNotOccupied.data" placeholder="Min.number of day" type="number"  />
+            <input ng-model="chosenReport.hasMinNoOfDaysNotOccupied.data" placeholder="Min.number of day" numbers-only  />
         </div>
 
 
