--- a/rover/partials/reports/filters/rvReportListFilters.html
+++ b/rover/partials/reports/filters/rvReportListFilters.html
@@ -358,7 +358,7 @@
 
 <div class="entry" ng-show="uiChosenReport.hasMinNoOfDaysNotOccupied">
     <label>Min. Days Not Occupied</label>
-    <input ng-model="uiChosenReport.hasMinNoOfDaysNotOccupied.data" value="" type="number" placeholder="Min.number of day" />
+    <input ng-model="uiChosenReport.hasMinNoOfDaysNotOccupied.data" value="" numbers-only placeholder="Min.number of day" />
 </div>
 
 <div class="entry" ng-show="uiChosenReport.sortByOptions">
