CICO-34245- text change

--- a/admin/partials/zestwebCommonSettings/adZestwebCommonSettings.html
+++ b/admin/partials/zestwebCommonSettings/adZestwebCommonSettings.html
@@ -1,7 +1,7 @@
 <section id="replacing-div-fourth" class="content current admin-scrollfix" div-touch-move-stop-propogate>
     <div ng-click="clearErrorMessage()">
         <header class="content-title float">
-            <h2>Zest web Common Settings</h2>
+            <h2>Zest Web Common Settings</h2>
             <a id="go_back" data-type="load-details" class="action back" ng-click="goBackToPreviousState()">Back</a>
         </header>
         <section class="content-scroll">
@@ -9,7 +9,7 @@
             <div ng-include="'/assets/partials/common/notification_success_message.html'"></div>
             <form class="form zest-web-settins-form float">
                 <div class="form-title full-width">
-                    <h3><span> Zestweb Footer setup</span></h3>
+                    <h3><span> Zest Web Footer setup</span></h3>
                 </div>
                 <div class="form-subtitle-title margin-bottom-50">
                     <h6><span>Customize what appears in the footer on Zest Web pages</span></h6>
