CICO-34716 Hiding payment section if deposit amount is zero

--- a/rover/partials/payment/rvReservationSummaryDepositPartial.html
+++ b/rover/partials/payment/rvReservationSummaryDepositPartial.html
@@ -1,4 +1,4 @@
-<div class="deposit" ng-class="{'notice' : !paymentAttempted }">
+<div class="deposit" ng-class="{'notice' : !paymentAttempted }" ng-show="payment.amount != 0">
     <section ng-if="!paymentAttempted">
         <p>Deposit required: <strong>{{depositPolicyName}}</strong>.</p>
 
@@ -23,8 +23,6 @@
             </div>
             <div class="entry full-width">
                 <label>Amount to pay (<span>{{currencySymbol}}</span>)</label>
-
-                <!--ng-class="{'red-text': depositWithGiftCard && !validPayment}"-->
                 <input ng-change="onPaymentInfoChange()"
                        ng-model="payment.amount"
                        type="text"
