CICO-34176 Fix for deposit modal showing for deposit value 0

--- a/rover/partials/reservation/rvSummaryAndConfirm.html
+++ b/rover/partials/reservation/rvSummaryAndConfirm.html
@@ -228,7 +228,7 @@
                             bill-number="billNumber"
                             payment-types="reservationData.paymentMethods"
                             selected-payment-type="reservationData.paymentType.type.value"
-                            selected-c-c="renderData"
+                            selected-c-c="summaryState.selectedCardDetails"
                             amount='reservationData.depositAmount'
                             action-type="DEPOSIT_PAYMENT_RES_SUMMARY"
                             is-editable='reservationData.depositEditable'
