--- a/rover/partials/payment/rvReservationSummaryDepositPartial.html
+++ b/rover/partials/payment/rvReservationSummaryDepositPartial.html
@@ -105,7 +105,7 @@
         <!-- <div class="notice error">Payment failed. Try again or change payment method.</div> -->
         <div class="notice error">{{paymentErrorMessage}}</div>
         <!-- Show when deposit payment fails  -->
-        <button type="button" class="button blue" ng-click="submitPayment()">Try Again</button>
+        <button type="button" class="button blue" ng-click="resetPaymentAttempt()">Try Again</button>
     </div>
 
 </div>
