--- a/admin/partials/templateConfiguration/adHotelConfigurationEdit.html
+++ b/admin/partials/templateConfiguration/adHotelConfigurationEdit.html
@@ -12,7 +12,7 @@
 					<div class="select">
 						<select name="hotel-chain" id="hotel-chain" class="placeholder" ng-model="hotelConfig.theme" ng-change="displayThemeTemplates()">
 							<option value=''>Hotel Theme</option>
-							<option value="{{theme.id}}" ng-repeat="theme in hotelConfig.themes" ng-selected="theme.id == hotelConfig.existing_email_template_theme"> {{theme.name}} </option>
+							<option value="{{theme.id}}" ng-repeat="theme in hotelConfig.themes | orderBy : 'name'" ng-selected="theme.id == hotelConfig.existing_email_template_theme"> {{theme.name}} </option>
 						</select>
 					</div>
 				</div>
