--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwAlreadyCheckedIn.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwAlreadyCheckedIn.html
@@ -6,7 +6,7 @@
 </div>
 
 <!-- main section starts here -->
-<div class="container">
+<div class="container content-container">
    <!-- if guest has already checked In -->
     <div class="row">
         <div class="col-md-1"></div>
