--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwCheckinDetails.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 <!-- main section starts here -->
-<div class="container">
+<div class="container content-container">
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-5 top-spacing res-date-container">
