--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwEarlyCheckinFinal.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwEarlyCheckinFinal.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 <!-- main section starts here -->
-<div class="container">
+<div class="container content-container">
     <!-- request text -->
     <div class="row" ng-show="isPosting && !netWorkError">
         <div class="col-md-2"></div>
