--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwEarlyCheckinOptions.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwEarlyCheckinOptions.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 <!-- main section starts here -->
-<div class="container">
+<div class="container content-container">
     <div class="row" ng-hide="isPosting || netWorkError">
         <div class="col-md-1"></div>
         <div class="col-md-4 top-spacing section-container">
