--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwExternalCheckInTurnedOff.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwExternalCheckInTurnedOff.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <!-- main section starts here -->
-<div class="container">
+<div class="container content-container">
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10 top-spacing">
