--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwExternalCheckin.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwExternalCheckin.html
@@ -3,7 +3,7 @@
         <img alt="" class="logo-image" src="{{hotelLogo}}"/>
     </div>
 </div>
-<div class="container">
+<div class="container content-container">
     <div class="row" ng-show="isLoading && !netWorkError">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
