--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwMobielNUmberOptions.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwMobielNUmberOptions.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 <!-- main section starts here -->
-<div class="container">
+<div class="container content-container">
     <!-- email entry -->
     <div class="row" ng-hide="isLoading || netWorkError || mobileUpdated">
         <div class="col-md-3"></div>
