--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwRoomUpgrades.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwRoomUpgrades.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <!-- main section starts here -->
-<div class="container-fluid">
+<div class="container content-container">
     <!-- request text -->
     <div class="row" ng-show="isFetching && !netWorkError">
         <div class="col-md-2"></div>
