--- a/guestweb/common_templates/partials/fontainebleau/checkin/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/fontainebleau/checkin/gwCheckinDetails.html
@@ -12,10 +12,10 @@
            <!--  -->
             <p class="sub-text light-text mob-margin-bottom-3">RESERVATION #{{confirmationNumber}}</p>
             <p class="main-text mob-margin-bottom-3" ng-hide="ShowupgradedLabel">
-                Your Stay Details
+                Your Trip Details
             </p>
             <p class="main-text mob-margin-bottom-3" ng-show="ShowupgradedLabel">
-                Your New Stay Details
+                Your New Trip Details
             </p>
             <div class="margin-top-10 mob-margin-top-3 mob-padding-bottom-3 bottom-border">
                 <div class="row">
@@ -67,16 +67,16 @@
                     </div>
                 </div>
             </div>
-            <div class="row applycharge margin-top-10 mob-margin-top-3">
+           <!--  <div class="row applycharge margin-top-10 mob-margin-top-3">
                 <div class="col-xs-12 left-align">
                     <input type="checkbox" ng-click="termsClicked()" ng-model="checked"  class="accept-checkbox" ng-checked="checkedApplyCharges">
                     <span class="footer-sub-text left-margin-10">I ACCEPT ALL TERMS AND CONDITIONS</span>
                 </div>
-            </div>
+            </div> -->
             <div class="row margin-top-10 hide-in-mobile">
                 <div class="col-xs-12 left-align">
                     <div class="footer-sub-text">
-                        QUESTIONS? <a href="tel:{{hotelPhone}}"><u class="phone-label">CALL US AT  {{hotelPhone}}.</u></a>
+                        ERRORS? <a href="tel:{{hotelPhone}}"><u class="phone-label">CALL US AT  {{hotelPhone}}.</u></a>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
         </div>
          <div class="col-md-3 lonely-btn">
              <center>
-                 <a class="btn btn-template margin-top-10" ng-click="checkInButtonClicked()"> Continue</a>
+                 <a class="btn btn-template margin-top-10" ng-click="skipTermsAndContinue()"> Continue</a>
              </center>
         </div>
         <div class="col-md-1">
@@ -95,7 +95,7 @@
         <div class="margin-top-10 hide-in-desktop">
                 <div class="col-xs-12 left-align">
                     <div class="footer-sub-text">
-                        QUESTIONS? <a href="tel:{{hotelPhone}}"><u class="phone-label">CALL US AT  {{hotelPhone}}.</u></a>
+                        ERRORS? <a href="tel:{{hotelPhone}}"><u class="phone-label">CALL US AT  {{hotelPhone}}.</u></a>
                     </div>
                 </div>
         </div>                    
