CICO-33706 : Displayed Account name/Address on topbar.

--- a/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
+++ b/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
@@ -19,6 +19,10 @@
             <span>{{selectedRateNames.join()}}</span>
             
         </li>
+        <li class="card" ng-show="selectedAccountName.length">
+            <strong>{{selectedAccountName.join()}}</strong>
+            <span>{{selectedAddress.join()}}</span>
+        </li>
          
         <!-- show .card if there are any cards selected -->
         <li class="card" ng-show="selectedCardNames.length">
