CICO-33706 : Topbar hide issue resolved.

--- a/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
+++ b/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
@@ -19,7 +19,7 @@
             <span>{{selectedRateNames.join()}}</span>
             
         </li>
-        <li class="card" ng-show="selectedAccountName.length">
+        <li class="card" ng-show="selectedAccountName[0]">
             <strong>{{selectedAccountName.join()}}</strong>
             <span>{{selectedAddress.join()}}</span>
         </li>
